@@ -373,8 +373,4 @@ input {
 #
 #filesystem_charset		"UTF-8"
 #
-# This setting controls the encoding that ID3v1 tags should be converted from.
-#
-#id3v1_encoding			"ISO-8859-1"
-#
 ###############################################################################
